# bytes-intense

./: .gitignore  Cargo.toml  JustFile  README.md  bytes-intense.sln  uniffi-bindgen.rs  uniffi.toml
dotnet-experiment/: Program.cs  dotnet-experiment.csproj
python-experiment/: test.py
src/: lib.rs
