[package]
name = "bytes-intense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "bytes_intense"

# We must use version 0.25.*, in compatible with the uniffi-bindgen-cs
[dependencies]
uniffi = { version = "0.25.3", features = ["cli"] }

[build-dependencies]
uniffi = {version = "0.25.3", features = ["build"]}

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
